# Matematik

./: CMakeLists.txt
include/: matematik.h  version.h
src/: CMakeLists.txt  matematik.cpp
